<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <TextView
            android:id="@+id/textNewPinLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_pin"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/editNewPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_6_digit_pin"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/textNewPinLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" />

        <TextView
            android:id="@+id/textConfirmPinLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_pin"
            android:textSize="16sp"
            app:layout_constraintTop_toBottomOf="@id/editNewPin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/editConfirmPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_6_digit_pin"
            android:inputType="numberPassword"
            android:maxLength="6"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@id/textConfirmPinLabel"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="8dp" />

        <Button
            android:id="@+id/buttonSavePin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_pin"
            app:layout_constraintTop_toBottomOf="@id/editConfirmPin"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp" />

        <Button
            android:id="@+id/buttonCancelPin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            app:layout_constraintTop_toBottomOf="@id/editConfirmPin"
            app:layout_constraintEnd_toStartOf="@id/buttonSavePin"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>