<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <TextView
                android:id="@+id/text_expense_pie_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expense_by_category"
                android:textSize="18sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/expensePieChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintTop_toBottomOf="@id/text_expense_pie_label"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text_income_pie_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/income_by_category"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/expensePieChart"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/incomePieChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintTop_toBottomOf="@id/text_income_pie_label"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text_income_line_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_income_last_30_days"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/incomePieChart"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/incomeLineChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintTop_toBottomOf="@id/text_income_line_label"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/text_expense_line_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/daily_expense_last_30_days"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/incomeLineChart"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/expenseLineChart"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                app:layout_constraintTop_toBottomOf="@id/text_expense_line_label"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>